@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST maildirproc-0.4.3.tar.gz 21731 RMD160 a8d3591182c79f3af527602d3b45364e4a6a765f SHA1 86655d61707c6889d44f7b92dff84b4084a7807a SHA256 acf89fe90aad4c20513d88f3441722bc6955a83d38d8aa27bd85c80929962854
+DIST maildirproc-0.5.0.tar.bz2 20066 RMD160 37ecf2ffc2bd29d7a230aae5bd133d0c2dd8433c SHA1 5220bddc011841a7a3a8238b84336e64a164b2cf SHA256 b55e8c607f94b1fc9a9e6124d59d1fe1530c9884fb0dad42090992c0515ecf59
 EBUILD maildirproc-0.4.3.ebuild 1024 RMD160 37833379bcf9e75b2ce8d8f1f5328cffb94e3010 SHA1 7060486cf0bdca56e77da2b034800d1ccdc786fd SHA256 462cf1165837f31d20b5a593d14e11f49939220cf96e571a569d8ad7d619f5a2
-MISC ChangeLog 549 RMD160 db31170d0c7058548483e35f5fa19386bc942515 SHA1 79c387a7f86db86bc657e75a959f61de2360ae91 SHA256 cda74f33a700d831e726764f93e7283ba7c8e2c3ef0e07ff3bf7fde59255d3cb
+EBUILD maildirproc-0.5.0.ebuild 1030 RMD160 b46af01de71d71665d521c0974746f9be36a9efa SHA1 1a252edf3e947368a69b3a22988cb37b2087b220 SHA256 cdb2304005eba432df676e58821726d952aa4b14eebcb17db3399eef998acefe
+MISC ChangeLog 678 RMD160 570f7cdef3501f23d4f199358eb883beb45e8119 SHA1 f7276c2d022dc643a10ee7dd94850652dbfeca6d SHA256 793b7bb84af9baae7a74a510520095a4904e2ec095c8f5a1c940ece91ee2399a
 MISC metadata.xml 752 RMD160 dc17cfd49602a00ac700d43ab113947c98299659 SHA1 8d629e703afc586ffbd6065774a4865632ea6219 SHA256 5a118b0a697ad49265aa18223c9b5359e9b128759e6b086853a5cc8c7c143e37
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkyZFZwACgkQzJrj3cAXR0mgggCgjO7tjgg1vypSRUnNXrlivX7L
-//kAn0xI1kEK4y9k4Te9gzo4dmvCjJVT
-=AC/p
+iEYEARECAAYFAkzO5vIACgkQzJrj3cAXR0lF4ACgmcelo+cAKJJeEogKJ/IcfsGQ
+VcUAn2pKPGRnR3jXdGnkwmowI3xnnvIx
+=0wuj
 -----END PGP SIGNATURE-----
