@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 =dev-lang/python-3*
+>=app-admin/eselect-python-20091230 =dev-lang/python-3*
+0
+http://joel.rosdahl.net/maildirproc/releases/maildirproc-0.5.0.tar.bz2
+
+http://joel.rosdahl.net/maildirproc/
+GPL-2
+maildir processor using Python as its configuration language
+~amd64 ~x86
+distutils multilib python toolchain-funcs
+examples
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
