@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*maildirproc-0.5.0 (01 Nov 2010)
+
+  01 Nov 2010; James Rowe <jnrowe@gmail.com> +maildirproc-0.5.0.ebuild:
+  Version bump [222].
+
   19 Sep 2010; James Rowe <jnrowe@gmail.com> maildirproc-0.4.3.ebuild:
   Keyworded x86.
 
